--- a/3 bash/Readme
+++ b/3 bash/Readme
@@ -1,7 +1,9 @@
 
-
-
-
 Переходим в репозиторий
 
 запускаем bash ./disk_condition.sh
+
+В данном случае добавлен текстовый документ msmtprc для отоброжения содержания
+
+
+Также для наглядности был заменен TRESHOLD = 0 чтобы вывести уведомление на почту (в итоговом файле все в порядке)
